# atlas-ae

./: LICENSE  README.md
ae/results/fig5a/: process.py
ae/results/fig6a/: process.py
ae/results/fig6b/: process.py
ae/scripts/drawing/: fig4.py  fig5a.py  fig5b.py  fig6a.py  fig6b.py
ae/scripts/fig4/: atc.sh  df.sh  gpr.sh  mcd-cl.sh  mcd-u.sh  mpvc.sh  mwc.sh  run-all.sh  ws.sh
ae/scripts/fig5/: cdf.sh  ltc.sh
ae/scripts/fig6/: cdf.sh  ltc.sh
ae/scripts/setup/: connect_client.sh  connect_server.sh
atlas-runtime/: .gitmodules  CMakeLists.txt  README.md
atlas-runtime/apps/gapbs/: 0001-feat-atlas-runtime-for-triangle-count.patch  README.md
atlas-runtime/apps/ligra/: README.md  import_wikipedia.py  ligra_paris.patch
atlas-runtime/apps/memcached/: README.md
atlas-runtime/apps/phoenix/: 0001-fix-fix-performance-bug-in-the-far-memory-context.patch  README.md
atlas-runtime/apps/redis/: 0001-feat-wip-redis-with-atlas-runtime.patch  0002-feat-redis-with-atlas-runtime-finish.patch  0003-feat-wip-redis-robj-with-atlas-runtime-finish.patch  0004-feat-redis-robj-with-atlas-runtime-finish.patch
atlas-runtime/apps/snappy/: README.md
atlas-runtime/bks_module/bks_drv/: bks.c  bks.h  bks_debugfs.c  bks_ioctl.c
atlas-runtime/scripts/: setup.sh
atlas-runtime/tests/runtime/array/: CMakeLists.txt  array_test.cc  test.sh  zipf.h
atlas-runtime/tests/runtime/object_fetch/: CMakeLists.txt  object_fetch_test.cc  test.sh
atlas-runtime/tests/runtime/runtime_raw/: CMakeLists.txt  runtime_raw_test.cc  test.sh
linux-5.14-rc5/: config
linux-5.14-rc5/mm/: rmap.c
(+64 files in other folders)
